View Issue Details Jump to Notes ] Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0015955CMakeCMakepublic2016-02-05 01:582016-06-10 14:31
ReporterHaju Schulz 
Assigned ToKitware Robot 
PrioritynormalSeverityminorReproducibilityalways
StatusclosedResolutionmoved 
PlatformX86OSWindowsOS Version8.1
Product VersionCMake 3.0.1 
Target VersionFixed in Version 
Summary0015955: CMAKE-GUI creates varies with trailing blanks
DescriptionThe cmake-gui dialog to add a variable includes trailing blanks into a variable name. This can lead to a variety of issues later during configure an build step because nothing visualizes such trailing blanks.

In my case I copied cmake project setup instructions from a website. This copy&paste operation resulted in the following name inside the cmake-gui: "BOOST_ROOT ". Mind the blank after "..ROOT" ! It took a long time to figure out why configuring this project failed to find BOOS as nothing in the gui shows this trailing blank.

To make things worse, the cmake-gui remembers that a user has added "BOOST_ROOT " variable, and keeps offering this as auto-complete name in new project setup attempts.
Steps To Reproduce1) create a new crake-project with make-gui
2) click "+ add entry"
3) Enter (without the "-Quotes) this as name: "NAME_WITH_SPACE "
4) press OK

The cmake-gui shows a variable with "NAME_WITH_SPACE", but internally it is "NAME_WITH_SPACE "
TagsNo tags attached.
Attached Files

 Relationships

  Notes
(0042933)
Kitware Robot (administrator)
2016-06-10 14:29

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2016-02-05 01:58 Haju Schulz New Issue
2016-06-10 14:29 Kitware Robot Note Added: 0042933
2016-06-10 14:29 Kitware Robot Status new => resolved
2016-06-10 14:29 Kitware Robot Resolution open => moved
2016-06-10 14:29 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team