cmake-gui: trim spaces from user-created variable names

Fixes: #15955